Downloads/Satmi-Chatbot/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satmi-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: satmi.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: satmi-app
                port:
                  name: http
